<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/select_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="64dp"
        android:text="@string/select_country"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/grid"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/select_text" />

    <GridLayout
        android:id="@+id/grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:columnCount="2"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/spinner">

        <TextView
            android:id="@+id/updated_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/updatedTitle"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/updated_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <TextView
            android:id="@+id/country_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/countryTitle"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/country_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <TextView
            android:id="@+id/cases_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/casesTitle"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/cases_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <TextView
            android:id="@+id/todaycases_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/todayCasesTitle"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/todaycases_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <TextView
            android:id="@+id/deaths_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/deathsTitle"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/deaths_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <TextView
            android:id="@+id/todaydeaths_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/todayDeathsTitle"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/todaydeaths_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <TextView
            android:id="@+id/recovered_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/recoveredTitle"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/recovered_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <TextView
            android:id="@+id/active_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/activeTitle"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/active_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <TextView
            android:id="@+id/critical_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/criticalTitle"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/critical_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

        <TextView
            android:id="@+id/tests_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:text="@string/testsTitle"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title" />

        <TextView
            android:id="@+id/tests_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:text="@string/zero"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>